# swagger-output.json
@@ -6,7 +6,9 @@
     "version": "1.0.0"
   },
   "basePath": "/",
-  "schemes": ["undefined"],
+  "schemes": [
+    "undefined"
+  ],
   "securityDefinitions": {
     "token": {
       "type": "apiKey",
@@ -18,37 +20,42 @@
   "paths": {
     "/user/sign-up": {
       "post": {
-        "tags": ["User"],
-        "description": "註冊會員",
+        "tags": [
+          "User"
+        ],
+        "description": "會員註冊",
         "parameters": [
           {
             "name": "body",
             "in": "body",
-            "description": "註冊會員格式",
+            "description": "會員註冊",
             "required": true,
             "schema": {
               "type": "object",
               "properties": {
                 "email": {
                   "type": "string",
-                  "example": "elsa.syu@gmail.com"
+                  "example": "elsa@gmail.com"
                 },
                 "password": {
                   "type": "string",
-                  "example": "Abc123456789"
+                  "example": "abc123456"
                 },
-                "nickName": {
+                "niclName": {
                   "type": "string",
-                  "example": "羽"
+                  "example": "elsa"
                 }
               },
-              "required": ["email", "password"]
+              "required": [
+                "email",
+                "password"
+              ]
             }
           }
         ],
         "responses": {
           "200": {
-            "description": "註冊成功",
+            "description": "登入成功",
             "schema": {
               "type": "object",
               "properties": {
@@ -84,6 +91,9 @@
                 "name": "main"
               }
             }
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         },
         "security": [
@@ -95,28 +105,119 @@
     },
     "/user/login": {
       "post": {
-        "tags": ["User"],
-        "description": "登入會員",
+        "tags": [
+          "User"
+        ],
+        "description": "會員登入",
         "parameters": [
           {
             "name": "body",
             "in": "body",
-            "description": "登入會員格式",
+            "description": "會員登入",
             "required": true,
             "schema": {
               "type": "object",
               "properties": {
                 "email": {
                   "type": "string",
-                  "example": "elsa.syu@gmail.com"
+                  "example": "elsa@gmail.com"
                 },
                 "password": {
                   "type": "string",
-                  "example": "Abc123456789"
+                  "example": "abc123456"
                 }
               },
-              "required": ["email", "password"]
+              "required": [
+                "email",
+                "password"
+              ]
             }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "登入成功",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "string",
+                  "example": "success"
+                },
+                "message": {
+                  "type": "string",
+                  "example": "登入成功"
+                },
+                "results": {
+                  "type": "object",
+                  "properties": {
+                    "token": {
+                      "type": "string",
+                      "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6ImVsc2FAZ21haWwuY29tIiwiYXV0aCI6MCwiaWF0IjoxNzE1MTAwODQxLCJleHAiOjE3MTUxODcyNDF9.iENpkK1osDQguIKY2oAmDkzuSo049qtWQlG0SwzSnTY"
+                    },
+                    "expires": {
+                      "type": "number",
+                      "example": 1615108416
+                    },
+                    "avatar": {
+                      "type": "string",
+                      "example": "https://fakeimg.pl/300/"
+                    },
+                    "auth": {
+                      "type": "number",
+                      "example": 0
+                    }
+                  }
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "400": {
+            "description": "登入失敗",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "string",
+                  "example": "error"
+                },
+                "message": {
+                  "type": "string",
+                  "example": "請輸入Email | 請輸入有效的Email | 請輸入Password | 密碼錯誤 | 這個 Email 尚未註冊"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "token": []
+          }
+        ]
+      }
+    },
+    "/user/check-login": {
+      "post": {
+        "tags": [
+          "User"
+        ],
+        "description": "確認登入",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "description": "Bearer token",
+            "required": true,
+            "type": "string"
           }
         ],
         "responses": {
@@ -139,7 +240,7 @@
               }
             }
           },
-          "400": {
+          "401": {
             "description": "登入失敗",
             "schema": {
               "type": "object",
@@ -150,13 +251,16 @@
                 },
                 "message": {
                   "type": "string",
-                  "example": "請輸入Email | 無此帳號 | 請輸入Password | 密碼至少需要 8 位數 | 密碼錯誤"
+                  "example": "身分驗證失敗，請重新登入"
                 }
               },
               "xml": {
                 "name": "main"
               }
             }
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         },
         "security": [
@@ -168,7 +272,9 @@
     },
     "/project/": {
       "post": {
-        "tags": ["Projects - 提案"],
+        "tags": [
+          "Projects - 提案"
+        ],
         "description": "發起提案",
         "parameters": [
           {
@@ -322,9 +428,13 @@
     },
     "/upload/": {
       "post": {
-        "tags": ["Upload - 圖片上傳"],
+        "tags": [
+          "Upload - 圖片上傳"
+        ],
         "description": "單一圖片上傳 (儲存在Imgur相簿)",
-        "consumes": ["multipart/form-data"],
+        "consumes": [
+          "multipart/form-data"
+        ],
         "parameters": [
           {
             "name": "body",
